--- a/src/index.scss
+++ b/src/index.scss
@@ -15,13 +15,18 @@
     margin: 10px 0;
     @apply bg-grayLight;
     border-radius: 6px;
-    transition: all 0.2s linear;
+    transition: all 0.1s linear;
     border: 1px solid transparent;
   }
   .Auth-input:focus{
-    @apply bg-white;
-    @apply border-primary;
+    outline:none;
+    background-color: white;
+    box-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    border-color: transparent;
+    --tw-ring-color: rgb(252, 193,87)
   }
+
+  //focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent
   .btn-disabled {
     opacity: 0.5;
     pointer-events: none;
@@ -36,6 +41,39 @@
   }
   .navlink:hover {
     opacity: 0.5;
+  }
+
+  //HEADER
+  .header-container{
+    height: 100px;
+  }
+  .header-nav li  {
+    display: inline-block;
+    padding-left: 20px;
+
+  }
+  .header-nav  li:hover {
+    @apply text-primary;
+  }
+  //Banner
+  .banner-container {
+    height: 520px;
+    background-image: linear-gradient(to right bottom, rgba(252, 193, 87, 0.8), rgba(250, 103, 87, 0.8));
+  }
+  //Post feature
+  .feature-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px 100px;
+  }
+  .post-feature {
+    background-image: url("../public/laptop_room.jpg");
+    background-size: cover;
+    margin: 20px;
+    border-radius: 12px;
+    width: 400px;
+    height: 300px;
   }
 }
 
