--- a/src/index.scss
+++ b/src/index.scss
@@ -75,6 +75,68 @@
     width: 400px;
     height: 300px;
   }
+
+  //DASHBOARD
+  .main-dashboard{
+    border-top: 1px solid #e5e5e5;
+    display:flex;
+  
+  }
+  .manage-post-table {
+    margin: 20px 0;
+    width: 100%;
+    border-collapse: collapse;
+  
+  }
+  .manage-post-table tr th {
+    padding: 20px 30px;
+    background-color: #edecec;
+    text-align: left
+  }
+  .manage-post-table tbody td {
+    padding: 20px 30px;
+    border-bottom: 1px solid #e5e5e5;
+    color:gray;
+  }
+  .btn-action {
+    padding: 8px 8px;
+    border-radius: 6px;
+    border: 1px solid #e5e5e5;
+  }
+  .btn-action + .btn-action {
+    margin-left: 10px;
+  
+  }
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+  }
+  .pagination li {
+    padding: 10px 0;
+    margin: 0 5px;
+    border-radius: 12px;
+  
+  }
+  .pagination li a {
+    padding: 10px 20px;
+    border-radius: 12px;
+  
+  }
+  .pagination li:hover {
+    @apply bg-primary;
+  }
+  .hidden-input {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+  }
 }
 
 @layer base {
